added basic mini-series

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -25,7 +25,13 @@
 
       .alix-width {
         width:300px
-
       }
+
+      /* .mini-series-half-w {
+        width:50%
+      }
+      .mini-series-fi-w {
+        width:50%
+      } */
     }
   }
